This file contains a summary of changes made and why.
2019Nov20 Several changes to replace f90 code by f77 code(by Ed Himwich):
          skdrini.f, snap.f, ../skdrut/vmoinp.f, vobinp.f, frinp.f, iwhere_in_string_list_nocase.f
2019Nov20 Bug fixes in snap.f and in sdrini.f.  Indices of arrays used wrong variables, eg. foo(ic) should be foo(i)
2019Sep23 proc_disk_tracks.f: If recorder=none do not round up channels recorded to power of 2. 
2019Aug15-Sep23.  Many changes merging VGOS and S/X branch together. Some bug fixes. About 20 files changed. 
2018Nov13 proc_disk_tracks.f: Removed checking of BW/samplerate. This will now be handled by the FS. 
2018Sep25 Makefile, drudg_rdctl.f: Location of skedf.ctl varies depending on whether computer is PC-FS or not. 
2018Sep11
   proc_disk_tracks.f: Comments modified based on email from WEH 2018Sep06. Also if fila10g, use 64 bit mask for Mark5C.  
   proc_dbbc_pfb_tracks.f: Fixed an error in writing out a mask. 
   proc_track_mask_lines.f: New routine.  writes out the mask lines for the proc_disk_tracks.f and proc_dbbc_pfb_tracks.f
2018Sep05 
   New routine: drudg_write_comment.f.  This outputs comment lines in files. 
   proc_mk5_init1.f:  Got rid of extraneous '"'  (double quotes) at end of comment lines.           
   proc_disk_tracks.f: Better debug info. Now if it doesn't find a valid mode, will write 
   all the "CSB" info (Channel-Sideband-Bit) info that was in the sked file. 
2018Sep04 
   get_version.f Removed line that wrote debug info. This was printing spurious "32". 
2018Aug18 
   Added support for modes that vsi2
   check_csb_list.f:    Increased mask from 32 bits to 64 bits
   proc_disk_tracks.f:  Added wastro2 and geo2 modes which can use 64 tracks. Also output comments 
   if DBBC_DDC or  DBBC_DDC/FILA10G saying how things should be setup for recorder. 
2018Jul20 
  New subroutine write_drudge_release_line for use by procintr.f and snapintf.f. Removed this functionality from both.